[package]
name = "changelog-md"
description = "Developer-friendly Changelog generation"
repository = "https://github.com/kageurufu/changelog-md"
keywords = ["CHANGELOG", "markdown", "releases"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
version = "1.1.1"
edition = "2024"


[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }

serde = { version = "1.0.218", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_with = { version = "3.12.0", features = ["schemars_0_8"] }

# Formats
serde_yml = "0.0.12"
serde_json = "1.0.139"
toml = "0.8.20"
schemars = "0.8.21"
chrono = "0.4.39"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
rstest = "0.24.0"

[lints.clippy]
cargo = { level = "deny", priority = -1 }
multiple-crate-versions = "warn"
missing_docs = "deny"
